<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.36">
  <DUT Name="MachiningStation" Id="{7c44811e-e72a-4e60-a813-a5080090ec76}">
    <Declaration><![CDATA[TYPE MachiningStation :
STRUCT
	// ALL NAMES ARE RELATIVE TO PLC (e.g., IN or OUT)
	// Coils
	CO	: MachiningStation_Coils;
	// Holding Registers
	HR	: MachiningStation_HoldingRegs;
	// Discrete Inputs
	DI	: MachiningStation_DiscreteInputs;
	// Input Registers
	IR	: MachiningStation_InputRegs;
	// Internal Variables
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>